<resources>
    <string name="app_name">Master_rad</string>
    <string name="tfe_od_camera_error">Uredjaj ne podrzava Camera2 API</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Detection class names to display names -->
    <string name="detection_warning_ahead">Upozorenje</string>
    <string name="detection_mandatory">Ogranicenje</string>
    <string name="detection_no_stopping_or_parking">Zabranjeno parkiranje</string>
    <string name="detection_stop">Stop</string>
    <string name="detection_give_road">Pravo prvenstva</string>
    <string name="detection_warning_on_spot">Prepreka ili pešački prelaz</string>

    <!-- navigation -->
    <string name="nav_home_page">Početna strana</string>
    <string name="nav_sign_detection">Detekcija saobraćajnih znakova</string>
    <string name="nav_enchanced_vision">Kompjuterski vid</string>
    <string name="nav_about_app">O aplikaciji</string>

    <!-- detection params -->
    <string name="detpar_preview_size">Veličina prikaza:</string>
    <string name="detpar_inference_time">Vreme detekcije:</string>

    <!-- about -->
    <string name="about_roadsign_detection">Detekcija saobraćajnih znakova je mod rada u kome aplikacija detektuje znakove na putu i detekcije prikazuje
    tako da kasnije možete pregledati detektovane znakove. Takođe, aplikacija prikazuje upozorenje ukoliko detektuje neki od znakova Stop, pešački prelaz
    ili ležeći policajac, ili znak za zabranjeno parkiranje i zaustavljane.</string>
    <string name="about_app">Aplikacija DSZ(detekcija saobraćajnih znakova) korišćenjem mašinskog učenja omogućuje korisnicima detekciju soabraćajnih znakova
    na putu u realnom vremenu, pomoću kamere na mobilnom uređaju.</string>
    <string name="about_enchanced_vision">Kompjuterski vid je mod rada aplikacije u kome se saobraćajni znakovi na putu detektuju i u realnom vremenom uokviruju,
    kako bi korisniku dočarali mogućnosti detektora pri detekciji saobraćajnih znakova.</string>
</resources>